--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 crispy-bootstrap4==2022.1
-Django==3.2
+Django==4.1
 django-crispy-forms==2.0
 django-location-field==2.7.0
 gunicorn==20.1.0
 Pillow==9.2.0
 psycopg2-binary==2.9.6
 python-dotenv==1.0.0
+pytz==2023.3
 six==1.16.0
